<resources>
    <string name="base_channel_name">base_channel</string>
    <string name="base_channel_description">줌마슬라이드 알림 체널</string>
    <string name="base_channel_id">base_channel</string>
    <string name="app_name">줌마슬라이드</string>
    <string name="action.disable">비활성</string>
    <string name="action.enable">활성</string>
    <string name="action.left">왼쪽</string>
    <string name="action.menu.cart">@string/label.cart</string>
    <string name="action.menu.like.modify">편집</string>
    <string name="action.menu.notification">알림</string>
    <string name="action.menu.purchase_history">@string/label.purchase.history</string>
    <string name="action.participate">참여하지 않은 광고</string>
    <string name="action.participate.already">참여한 광고</string>
    <string name="action.right">오른쪽</string>
    <string name="a_name">줌마슬라이드</string>
    <string name="appbar_fling_behavior">com.apartslide.widget.FlingBehavior</string>
    <string name="deduction_message">관리비로 차감됩니다.\n%s월에 받는 관리비 청구서에서 확인하세요.</string>
    <string name="deduction_price">차감 금액</string>
    <string name="delivery">배달</string>
    <string name="deposit_date">입금 날짜: %s</string>
    <string name="description.image.thumbnail">썸네일 이미지</string>
    <string name="empty_name">이름 없음</string>
    <string name="empty_nickname">별명 없음</string>
    <string name="expected_deduction_price">차감 예정 금액</string>
    <string name="expected_payments_price">지급 예정 금액</string>
    <string name="find_my_location">내 위치 찾는 중</string>
    <string name="empty_location">위치 정보가 없습니다.</string>
    <string name="format.apartment.agree.request">%d명 요청 중</string>
    <string name="format.apartment.timestamp">%1$s, %2$d명이 신청 중</string>
    <string name="format.day">%d일</string>
    <string name="format.day_of_week">%s요일</string>
    <string name="format.hours_minutes_seconds">%1$d시간 %2$d분 %3$d초</string>
    <string name="format.mail.app_error.contents">통신사: %1$s\n모델명: %2$s\n운영체제 버전: %3$d\n어플리케이션 버전:
        %4$s(%5$d)\n연락처: %6$s\n\n여기에 문의 내용을 적어주세요.
    </string>
    <string name="format.meters">%dm</string>
    <string name="format.minutes">%s분</string>
    <string name="format.minutes_seconds">%1$d분 %2$s초</string>
    <string name="format.month">%d월</string>
    <string name="format.ocb">%,d P</string>
    <string name="format.ocb.fees">수수료(%.1f%%)</string>
    <string name="format.persons">%1$,d명</string>
    <string name="format.price">%1$,d원</string>
    <string name="format.year">%d년</string>
    <string name="format.year.short">’%d년</string>
    <string name="format_10k">%d만</string>
    <string name="format_10k_f">%.1f만</string>
    <string name="format_bank_account">%1$s %2$s (%3$s)</string>
    <string name="format_date">%1$d년 %2$d월 %3$d일</string>
    <string name="format_date2">%1$d년 %2$d월</string>
    <string name="format_hundred">%d백</string>
    <string name="format_hundred_f">%.1f백</string>
    <string name="format_k">%d천</string>
    <string name="format_k_f">%.1f천</string>
    <string name="format_number">%1$,d</string>
    <string name="format_point">%1$,d줌</string>
    <string name="format_ten">%d십</string>
    <string name="format_ten_f">%.1f십</string>
    <string name="format_total_zmoney">누적: %1$,d줌</string>
    <string name="format_zmoney_dashboard_date_daily">yyyy년 M월 d일</string>
    <string name="format_zmoney_dashboard_date_monthly">yyyy년 M월</string>
    <string name="hint.family.name">가족 이름(2자 이상)</string>
    <string name="hint.name">실명(2자 이상)</string>
    <string name="hint.nickname">별명(2자 이상)</string>
    <string name="hint.search">@string/search</string>
    <string name="hint.suggestion.content">제안 내용을 입력해주세요.</string>
    <string name="hint.suggestion.title">제목을 입력해주세요.</string>
    <string name="invite_family_message">가입시 추천인 코드:[%2$s] 입력하고\n%1$s
    </string>
    <string name="invite_family_message_with_link">%1$s님이 [%2$s] 가족으로 초대합니다. 추천인코드 %4$s를 입력하세요. %3$s
    </string>
    <string name="invite_friend_message">가입시 추천인 코드:[%2$s] 입력하고\n%1$s
    </string>
    <string name="invite_friend_message_with_link">가입시 추천인 코드:[%2$s] 입력하고\n%1$s\n링크:
        https://bit.ly/Zummaslide
    </string>
    <string name="key.admob.banner.home">ca-app-pub-8980900389635455/9798797128</string>
    <string name="key.admob.banner.mission">ca-app-pub-8980900389635455/3287379922</string>
    <string name="key.admob.banner.mypage">ca-app-pub-8980900389635455/8228087129</string>
    <string name="key.admob.banner.zummacast">ca-app-pub-8980900389635455/7230215125</string>
    <string name="key.facebook">173622276376068</string>
    <string name="label.account">계정</string>
    <string name="label.account.my">내 계정</string>
    <string name="label.account.number">계좌번호</string>
    <string name="label.account.owner">예금주</string>
    <string name="label.account_setting.family_info">우리집 별명 / 주소</string>
    <string name="label.account_setting.level_benefit">@string/label.level_benefit</string>
    <string name="label.account_setting.nickname">별명</string>
    <string name="label.account_setting.reset_password">비밀번호 변경</string>
    <string name="label.account_setting.user_info">개인 정보</string>
    <string name="label.action.share">공유하기</string>
    <string name="label.ad.address">주소: %s</string>
    <string name="label.ad.business_hour">평일: %1$s ~ %2$s</string>
    <string name="label.ad.direction">오시는 길: %s</string>
    <string name="label.ad.holiday_business_hour">주말: %1$s ~ %2$s</string>
    <string name="label.ad_help">@string/label.help.ad_partner</string>
    <string name="label.ad_help.contact">support@mobitle.com</string>
    <string name="label.ad_help.help">광고 문의하기</string>
    <string name="label.agree">동의</string>
    <string name="label.agree.third">개인정보 제 3자 제공동의</string>
    <string name="label.alert.auth">등록하기</string>
    <string name="label.alert.family">등록하기</string>
    <string name="label.all">전체</string>
    <string name="label.apartment.agree.complete">협약 완료</string>
    <string name="label.apartment.agree.wait">협약 대기 중</string>
    <string name="label.apartment.complete.address">주소 완성하기</string>
    <string name="label.apartment.name">아파트 이름</string>
    <string name="label.apartment.registration">아파트 이름 제보하기</string>
    <string name="label.apartment.registration.empty">목록 중에 없어요. 새로 신청할래요.</string>
    <string name="label.apartment.registration.request.complete">아파트 이름 제보 완료</string>
    <string name="label.apartment.registration.retry">다시 등록하기</string>
    <string name="label.apartment.registration.waiting">아파트\n등록 중…</string>
    <string name="label.apply.easy">간편신청</string>
    <string name="label.apply.normal">일반신청</string>
    <string name="label.auth.email">이메일로 시작하기</string>
    <string name="label.auth.kakao">카카오 아이디로 시작하기</string>
    <string name="label.auth.naver">네이버 아이디로 시작하기</string>
    <string name="label.auth.phone">휴대폰 번호로 시작하기</string>
    <string name="label.bank.name">은행이름</string>
    <string name="label.birth.day">@string/label.day</string>
    <string name="label.birth.month">@string/label.month</string>
    <string name="label.birth.year">태어난 해</string>
    <string name="label.board.go">카카오톡 문의하기</string>
    <string name="label.business.hour">영업시간</string>
    <string name="label.business.hour.bold">
        <b>영업시간</b>
    </string>
    <string name="label.business.name">상호</string>
    <string name="label.call.now">바로 전화</string>
    <string name="label.cancel">취소</string>
    <string name="label.cancel.order">주문취소</string>
    <string name="label.cancel2">취소하기</string>
    <string name="label.cart">장바구니</string>
    <string name="label.cart.shop">장바구니 담기</string>
    <string name="label.cart.store_simple">담기</string>
    <string name="label.cast.bookmark">줌마캐스트 보관함</string>
    <string name="label.category">카테고리</string>
    <string name="label.certification">인증하기</string>
    <string name="label.certification.code">인증번호</string>
    <string name="label.certification.do">실명인증 하기</string>
    <string name="label.certification.name">실명인증</string>
    <string name="label.certification.remain">유효 시간</string>
    <string name="label.certification.request.code">인증하기</string>
    <string name="label.certification.request.code.retry">인증번호 재요청</string>
    <string name="label.certification.timeout">시간초과</string>
    <string name="label.check.address">주소 확인</string>
    <string name="label.check.benefit">혜택보기</string>
    <string name="label.clipboard">내용 복사</string>
    <string name="label.close">닫기</string>
    <string name="label.close.always">다시 보지 않기</string>
    <string name="label.collapse">접기</string>
    <string name="label.colon"> : </string>
    <string name="label.company_registration_number">사업자등록번호</string>
    <string name="label.complete">완료</string>
    <string name="label.complete.signup">가입완료</string>
    <string name="label.complete.use">사용 완료</string>
    <string name="label.confirm">확인</string>
    <string name="label.confirm.new.password">새로운 비밀번호 확인</string>
    <string name="label.confirm.password">비밀번호 확인</string>
    <string name="label.contact.call">1670–9039</string>
    <string name="label.contactus">문의하기</string>
    <string name="label.coupon.remain">
        <b>사용 가능 쿠폰</b>
    </string>
    <string name="label.coupon.used">
        <b>사용 완료</b>
    </string>
    <string name="label.coupon_count">쿠폰 -장</string>
    <string name="label.coupons">쿠폰함</string>
    <string name="label.current_state">현황</string>
    <string name="label.date">날짜</string>
    <string name="label.day">일</string>
    <string name="label.deduction">적립</string>
    <string name="label.delete">삭제</string>
    <string name="label.delivery">배달</string>
    <string name="label.delivery.business_hour">배달시간</string>
    <string name="label.delivery.coverage">배달지역</string>
    <string name="label.delivery.coverage.bold">
        <b>배달지역</b>
    </string>
    <string name="label.delivery.guide">배송안내</string>
    <string name="label.delivery.prepare">배송준비중</string>
    <string name="label.delivery.price">배송비</string>
    <string name="label.delivery.tracking">배송조회</string>
    <string name="label.deposit.limit">입금기한: %s</string>
    <string name="label.deposit.wait">입금대기중</string>
    <string name="label.description">설명</string>
    <string name="label.detail">상세정보</string>
    <string name="label.dongs">동/읍/면</string>
    <string name="label.drawer.address_complete">주소 완성</string>
    <string name="label.drawer.address_input">주소 입력</string>
    <string name="label.drawer.barcode.content">회원번호 :
        <b>%s</b>
    </string>
    <string name="label.drawer.event">이벤트</string>
    <string name="label.drawer.faq">자주 묻는 질문</string>
    <string name="label.drawer.help">고객지원</string>
    <string name="label.drawer.help.app">어플 오류 문의</string>
    <string name="label.drawer.help.cooperate_ad">광고 제휴 문의</string>
    <string name="label.drawer.help.zmoney">적립 문의</string>
    <string name="label.drawer.help.zummastore">줌마가게 이용방법</string>
    <string name="label.drawer.notice">공지사항</string>
    <string name="label.drawer.setting.app">앱 설정</string>
    <string name="label.drawer.setting.family">우리집 정보</string>
    <string name="label.drawer.setting.user">내 정보</string>
    <string name="label.drawer.update_profile">@string/label.update.profile</string>
    <string name="label.drawer.zummamall.cart">줌마쇼핑 장바구니</string>
    <string name="label.drawer.zummamall.history">줌마쇼핑 구매내역</string>
    <string name="label.drawer.zummastore.history">줌마가게 적립내역</string>
    <string name="label.drawer.zummastore.like.list">좋아요 목록</string>
    <string name="label.email.address">이메일 주소</string>
    <string name="label.empty.error.button">새로고침</string>
    <string name="label_payments_account">입금 계좌</string>
    <string name="label_registration_account">계좌 등록</string>
    <string name="label_update_account">수정</string>
    <string name="message_bank_account_alert3">계좌 정보는 가족 대표가 등록, 수정할 수 있습니다.\n가족 대표: %1$s, %2$s
    </string>
    <string name="message_error_expected_payments2">지급 받으실 계좌 정보를 입력해주세요.</string>
</resources>