<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingBottom="@dimen/spacing_huge"
    android:paddingEnd="18dp"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingStart="18dp"
    android:paddingTop="@dimen/spacing_huge">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_payments_account"
            android:textColor="@color/gray_9"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_larger"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/bankAccount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/message_error_expected_payments2"/>

            <TextView
                android:id="@+id/editBankAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/spacing_micro"
                android:text="@string/label_update_account"
                android:textColor="@color/blue_light"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bankAccountAlertContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_account_alert"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/wrongAccountTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:textSize="@dimen/font_micro"
                android:textStyle="bold"
                android:text="계좌정보 확인"/>

            <TextView
                android:id="@+id/wrongAccountContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/spacing_micro"
                android:background="@drawable/bg_account_alert"
                android:textSize="@dimen/font_micro"
                android:text="계좌정보가 부정확할 경우 입금되지 않고, 이월됩니다.\n꼭 정확한 계좌정보를 입력해주세요."/>

            <TextView
                android:id="@+id/bankAccountAlert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="@dimen/spacing_micro"
                android:background="@drawable/bg_account_alert"
                android:textSize="@dimen/font_micro"
                tools:text="@string/message_bank_account_alert3"/>
        </LinearLayout>

        <Button
            android:id="@+id/registrationBankAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_accent"
            android:padding="@dimen/spacing_large"
            android:text="@string/label_registration_account"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </LinearLayout>
</LinearLayout>